# artist-feedback-bot

./: .gitignore  README.md  pyproject.toml
src/bot/: config.py  logger.py  main.py  redis_utils.py  storage.py
src/handlers/: callbacks.py  commands.py  messages.py
src/services/: block_service.py  logger_service.py  redis_service.py  storage_service.py
